Changed CMakeList in swri_tranform_util to specify c++ standard version only for kinetic.

--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -82,7 +82,10 @@ target_link_libraries(${PROJECT_NAME}
   opencv_imgproc
   opencv_video
 )
-set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+if ($ENV{ROS_DISTRO} EQUAL "kinetic")
+  set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+  set_property(TARGET ${PROJECT_NAME} PROPERTY CMAKE_CXX_STANDARD_REQUIRED ON)
+endif()
 target_compile_definitions(${PROJECT_NAME} PUBLIC "-DACCEPT_USE_OF_DEPRECATED_PROJ_API_H")
 
 add_library(${PROJECT_NAME}_nodelets
@@ -90,7 +93,11 @@ add_library(${PROJECT_NAME}_nodelets
   src/nodelets/gps_transform_publisher.cpp
   src/nodelets/object_transformer.cpp)
 target_link_libraries(${PROJECT_NAME}_nodelets ${catkin_LIBRARIES} ${PROJECT_NAME})
-set_target_properties(${PROJECT_NAME}_nodelets PROPERTIES COMPILE_FLAGS "-std=c++11 -D__STDC_FORMAT_MACROS")
+if ($ENV{ROS_DISTRO} EQUAL "kinetic")
+  set_property(TARGET ${PROJECT_NAME}_nodelets PROPERTY CXX_STANDARD 11)
+  set_property(TARGET ${PROJECT_NAME}_nodelets PROPERTY CMAKE_CXX_STANDARD_REQUIRED ON)
+endif()
+target_compile_definitions(${PROJECT_NAME}_nodelets PRIVATE "-D__STDC_FORMAT_MACROS") 
 
 add_executable(lat_lon_tf_echo src/nodes/lat_lon_tf_echo.cpp)
 target_link_libraries(lat_lon_tf_echo ${PROJECT_NAME})
