Fixed ROS_DISTRO string comparison in swri_transform_util CMakeLists

--- a/swri_transform_util/CMakeLists.txt
+++ b/swri_transform_util/CMakeLists.txt
@@ -60,7 +60,7 @@ include_directories(SYSTEM
   ${PROJ_INCLUDE_DIRS}
 )
 
-if ($ENV{ROS_DISTRO} EQUAL "kinetic")
+if ($ENV{ROS_DISTRO} STREQUAL "kinetic")
   set(CXX_STANDARD 11)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
 endif()
