Added ROS_VERSION ifdef to switch YamlNodePtr typedef for melodic and greater.

--- a/swri_yaml_util/package.xml
+++ b/swri_yaml_util/package.xml
@@ -15,5 +15,6 @@
   <buildtool_depend>pkg-config</buildtool_depend>
   <depend>boost</depend>
   <depend>yaml-cpp</depend>
+  <depend>roscpp</depend>
 </package>
 
