Actually writing rosman service output to screen now. Added marti_common_msgs as dependency

--- a/rosman/CMakeLists.txt
+++ b/rosman/CMakeLists.txt
@@ -1,10 +1,18 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(rosman)
 
-find_package(catkin REQUIRED)
+set(RUN_DEPS
+  marti_common_msgs
+  rosgraph
+  rospy
+  rostopic
+)
+
+find_package(catkin REQUIRED
+)
 
 catkin_package(
-#  CATKIN_DEPENDS rosgraph rostopic
+  CATKIN_DEPENDS ${RUN_DEPS}
 )
 
 catkin_python_setup()
