--- a/rosman/package.xml
+++ b/rosman/package.xml
@@ -13,7 +13,7 @@
   <author email="robert.brothers@swri.org">Robert Brothers</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>marti_common_msgs</depend>
+  <depend>marti_introspection_msgs</depend>
   <exec_depend>rosgraph</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>rostopic</exec_depend>
