--- a/swri_roscpp/package.xml
+++ b/swri_roscpp/package.xml
@@ -17,6 +17,7 @@
   <depend>diagnostic_updater</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>marti_common_msgs</depend>
+  <depend>marti_introspection_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
   <depend>std_msgs</depend>
