--- a/swri_route_util/package.xml
+++ b/swri_route_util/package.xml
@@ -21,6 +21,7 @@
   <depend>swri_math_util</depend>
   <depend>swri_geometry_util</depend>
   <depend>swri_roscpp</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>visualization_msgs</depend>
 
   <export>
