Renaming package name

--- a/swri_cli_tools/CMakeLists.txt
+++ b/swri_cli_tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(rosman)
+project(swri_cli_tools)
 
 set(RUN_DEPS
   marti_introspection_msgs
@@ -21,5 +21,5 @@ install(DIRECTORY scripts
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-catkin_add_env_hooks(15.rosman SHELLS bash DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
+catkin_add_env_hooks(15.swri_cli_tools SHELLS bash DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
 
