Renamed rosman package to swri_cli_tools.

--- a/swri_cli_tools/package.xml
+++ b/swri_cli_tools/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>rosman</name>
+  <name>swri_cli_tools</name>
   <version>2.15.1</version>
   <description>
 
