Add support for Humble

--- a/swri_geometry_util/CMakeLists.txt
+++ b/swri_geometry_util/CMakeLists.txt
@@ -32,7 +32,7 @@ target_include_directories(${PROJECT_NAME}
   ${GEOS_INCLUDE_DIRS}
 )
 target_link_libraries(${PROJECT_NAME}
-  ${GEOS_LIBRARIES}
+  geos
   Eigen3::Eigen
   opencv_core
 )
@@ -68,6 +68,6 @@ ament_export_dependencies(cv_bridge)
 ament_export_dependencies(tf2)
 ament_export_include_directories(include)
 ament_export_libraries(${PROJECT_NAME}
-  ${GEOS_LIBRARIES})
+  geos)
 
 ament_package()
