--- a/swri_cli_tools/package.xml
+++ b/swri_cli_tools/package.xml
@@ -9,7 +9,7 @@
   </description>
 
   <maintainer email="robert.brothers@swri.org">Robert Brothers</maintainer>
-  <maintainer email="matthew.bries@swri.org">Matt Bries</maintainer>
+  <maintainer email="david.anthony@swri.org">David Anthony</maintainer>
 
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
