--- a/swri_geometry_util/package.xml
+++ b/swri_geometry_util/package.xml
@@ -20,7 +20,7 @@
   -->
   <depend>cv_bridge</depend>
   <depend>eigen</depend>
-  <depend>libgeos++-dev</depend>
+  <depend>libgeos-dev</depend>
   <depend>rclcpp</depend>
   <depend>tf2</depend>
 
