--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -19,6 +19,7 @@
   <depend>boost</depend>
   <depend>cv_bridge</depend>
   <depend>diagnostic_msgs</depend>
+  <depend>diagnostic_updater</depend>
   <depend>geographic_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>gps_msgs</depend>
