--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(std_srvs REQUIRED)
 
 # TODO pjr What to do about swri_roscpp-extras.cmake?
 
-### Build Test Node ###
+# ### Build Test Node ###
 add_executable(subscriber_test src/nodes/subscriber_test.cpp)
 target_include_directories(subscriber_test
   PUBLIC
@@ -88,17 +88,18 @@ if (BUILD_TESTING)
   )
 
   ament_add_gtest(topic_service_test_server test/topic_service_test.cpp)
+
   if ("$ENV{ROS_DISTRO}" STRGREATER "galactic")
     rosidl_get_typesupport_target(cpp_typesupport_target "${PROJECT_NAME}" "rosidl_typesupport_cpp")
     target_link_libraries(topic_service_test_server "${cpp_typesupport_target}")
   else()
     rosidl_target_interfaces(topic_service_test_server "${PROJECT_NAME}" "rosidl_typesupport_cpp")
   endif()
-
   target_link_libraries(topic_service_test_server
     Boost::system
-    swri_roscpp__rosidl_typesupport_cpp
+    swri_roscpp_test__rosidl_typesupport_cpp
   )
+
   ament_target_dependencies(topic_service_test_server
     rclcpp
     marti_common_msgs
