--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -91,14 +91,17 @@ if (BUILD_TESTING)
 
   if ("$ENV{ROS_DISTRO}" STRGREATER "galactic")
     rosidl_get_typesupport_target(cpp_typesupport_target "${PROJECT_NAME}" "rosidl_typesupport_cpp")
-    target_link_libraries(topic_service_test_server "${cpp_typesupport_target}")
+    target_link_libraries(topic_service_test_server
+      Boost::system
+      "${cpp_typesupport_target}"
+    )
   else()
     rosidl_target_interfaces(topic_service_test_server "${PROJECT_NAME}" "rosidl_typesupport_cpp")
+    target_link_libraries(topic_service_test_server
+      Boost::system
+      swri_roscpp_test__rosidl_typesupport_cpp
+    )
   endif()
-  target_link_libraries(topic_service_test_server
-    Boost::system
-    swri_roscpp_test__rosidl_typesupport_cpp
-  )
 
   ament_target_dependencies(topic_service_test_server
     rclcpp
