Add Humble Support (#691)
* Adding Humble support based on @shrijitsingh99 PR in https://github.com/swri-robotics/marti_common/pull/685

--- a/swri_route_util/CMakeLists.txt
+++ b/swri_route_util/CMakeLists.txt
@@ -28,6 +28,12 @@ target_include_directories(${PROJECT_NAME}
   $<INSTALL_INTERFACE:include>
 )
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+if ("$ENV{ROS_DISTRO}" STRLESS_EQUAL "galactic")
+  target_compile_definitions(${PROJECT_NAME}
+    PRIVATE "-DUSE_TF2_H_FILES")
+endif()
+
 ament_target_dependencies(${PROJECT_NAME}
   ament_cmake
   marti_common_msgs
