Fixing various problems

--- a/swri_cli_tools/setup.cfg
+++ b/swri_cli_tools/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/<package-name>
+script_dir=$base/lib/<package-name>
 [install]
-install-scripts=$base/lib/<package-name>
+install_scripts=$base/lib/<package-name>
