WIP: Fix dependencies (#704)
* Fixing build process so dependencies are correctly exported.

--- a/swri_roscpp/CMakeLists.txt
+++ b/swri_roscpp/CMakeLists.txt
@@ -2,7 +2,17 @@ cmake_minimum_required(VERSION 3.10)
 
 project(swri_roscpp)
 
-set(CMAKE_CXX_STANDARD 14)
+# Default to C++ version appropriate for the ROS distribution
+if(NOT CMAKE_CXX_STANDARD)
+  if ("$ENV{ROS_DISTRO}" STRGREATER "foxy")
+    set(CMAKE_CXX_STANDARD 17) 
+  else()
+    set(CMAKE_CXX_STANDARD 14) 
+  endif()
+endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(diagnostic_updater REQUIRED)
@@ -14,131 +24,62 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 
-# TODO pjr What to do about swri_roscpp-extras.cmake?
-add_library(${PROJECT_NAME} INTERFACE)
+# How we build header only libraries changed in Humble
+if("$ENV{ROS_DISTRO}" STRGREATER "galactic")
+  add_library(${PROJECT_NAME}_library INTERFACE)
 
-target_include_directories(${PROJECT_NAME} INTERFACE
-  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-  "$<INSTALL_INTERFACE:include>"
-)
+  target_link_libraries(${PROJECT_NAME}_library INTERFACE
+    ${diagnostic_updater_LIBRARIES}
+    ${rclcpp_LIBRARIES}
+    ${std_msgs_LIBRARIES}
+  )
+  target_include_directories(${PROJECT_NAME}_library INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
+    ${diagnostic_updater_INCLUDE_DIRS}
+    ${rclcpp_INCLUDE_DIRS}
+    ${std_msgs_INCLUDE_DIRS}
+  )
+  
+  install(DIRECTORY include/
+    DESTINATION include/${PROJECT_NAME}
+  )
+  install(TARGETS ${PROJECT_NAME}_library
+    EXPORT export_${PROJECT_NAME}
+  )
 
-install(TARGETS ${PROJECT_NAME}
-  EXPORT "export_${PROJECT_NAME}"
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib
-  INCLUDES DESTINATION include
-)
+  # Export old-style CMake variables
+  ament_export_include_directories("include/${PROJECT_NAME}")
 
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION include/${PROJECT_NAME}
-)
+  # Export modern CMake targets
+  ament_export_targets(export_${PROJECT_NAME})
 
-ament_export_targets("export_${PROJECT_NAME}")
+  # Only test on Humble or newer until https://github.com/ros2/rosidl/pull/639 is merged
+  include(cmake/swri_roscpp-test.cmake)
+else()
+  install(DIRECTORY include/${PROJECT_NAME}/
+    DESTINATION include/${PROJECT_NAME}
+  )
+  ament_export_include_directories(include)
+endif()
 
-# ### Build Test Node ###
 add_executable(subscriber_test src/nodes/subscriber_test.cpp)
 target_include_directories(subscriber_test
   PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
+  ${diagnostic_updater_INCLUDE_DIRS}
+  ${nav_msgs_INCLUDE_DIRS}
+  ${rclcpp_INCLUDE_DIRS}
 )
-ament_target_dependencies(subscriber_test
-  diagnostic_updater
-  marti_common_msgs
-  nav_msgs
-  rclcpp
-  std_msgs
-  std_srvs
+target_link_libraries(subscriber_test
+  ${diagnostic_updater_LIBRARIES}
+  ${marti_common_msgs_LIBRARIES}
+  ${nav_msgs_LIBRARIES}
+  ${rclcpp_LIBRARIES}
+  ${std_msgs_LIBRARIES}
+  ${std_srvs_LIBRARIES}
 )
-
-add_executable(storing_subscriber_test src/nodes/storing_subscriber_test.cpp)
-target_include_directories(storing_subscriber_test
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-ament_target_dependencies(storing_subscriber_test
-  diagnostic_updater
-  marti_common_msgs
-  nav_msgs
-  rclcpp
-  std_msgs
-  std_srvs
-  )
-
-add_executable(service_server_test src/nodes/service_server_test.cpp)
-target_include_directories(service_server_test
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-ament_target_dependencies(service_server_test
-  diagnostic_updater
-  marti_common_msgs
-  nav_msgs
-  rclcpp
-  std_msgs
-  std_srvs
-  )
-
-add_executable(timer_test src/nodes/timer_test.cpp)
-target_include_directories(timer_test
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-)
-ament_target_dependencies(timer_test
-  diagnostic_updater
-  marti_common_msgs
-  nav_msgs
-  rclcpp
-  std_msgs
-  std_srvs
-  )
-
-  # Disabling Foxy and Galactic tests until https://github.com/ros2/rosidl/pull/639 is merged
-if (BUILD_TESTING AND ("$ENV{ROS_DISTRO}" STRGREATER "galactic"))
-  find_package(ament_cmake_gtest REQUIRED)
-  find_package(Boost REQUIRED COMPONENTS system)
-
-  rosidl_generate_interfaces(${PROJECT_NAME}_test
-    msg/TestTopicServiceRequest.msg
-    msg/TestTopicServiceResponse.msg
-    DEPENDENCIES std_msgs marti_common_msgs
-    LIBRARY_NAME ${PROJECT_NAME}
-  )
-
-  ament_add_gtest(topic_service_test_server test/topic_service_test.cpp)
-
-  # Humble and onwards
-  if ("$ENV{ROS_DISTRO}" STRGREATER "galactic")
-    rosidl_get_typesupport_target(cpp_typesupport_target "${PROJECT_NAME}_test" "rosidl_typesupport_cpp")
-    target_link_libraries(topic_service_test_server
-      Boost::system
-      "${cpp_typesupport_target}"
-    )
-  else()
-    rosidl_target_interfaces(topic_service_test_server "${PROJECT_NAME}_test" "rosidl_typesupport_cpp")
-    target_link_libraries(topic_service_test_server
-      Boost::system
-      swri_roscpp_test__rosidl_typesupport_cpp
-    )
-  endif()
-
-  ament_target_dependencies(topic_service_test_server
-    rclcpp
-    marti_common_msgs
-  )
-  target_include_directories(topic_service_test_server
-    PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-  )
-
-  ament_export_dependencies(rosidl_default_runtime)
-endif()
-
 ### Install Test Node and Headers ###
 install(TARGETS subscriber_test
   ARCHIVE DESTINATION lib
@@ -147,9 +88,6 @@ install(TARGETS subscriber_test
 )
 install(PROGRAMS scripts/service_splitter.py
   DESTINATION bin
-)
-install(DIRECTORY include/
-  DESTINATION include
 )
 install(DIRECTORY launch/
   DESTINATION launch
@@ -162,6 +100,5 @@ ament_export_dependencies(nav_msgs)
 ament_export_dependencies(rclcpp)
 ament_export_dependencies(std_msgs)
 ament_export_dependencies(std_srvs)
-ament_export_include_directories(include)
 
 ament_package(CONFIG_EXTRAS cmake/swri_roscpp-extras.cmake )
