--- a/swri_transform_util/package.xml
+++ b/swri_transform_util/package.xml
@@ -23,7 +23,7 @@
   <depend>geographic_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>gps_msgs</depend>
-  <depend>libgeos++-dev</depend>
+  <depend>geos</depend>
   <depend>marti_nav_msgs</depend>
   <depend>proj</depend>
   <depend>rclcpp_components</depend>
